--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ title: Home
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
-    {% include navigation.html %}
+    <h1>Negishi Kanta</h1>
+
     {{ content }}
   </body>
 </html>
