--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@ title: Home
     <h1>Negishi Kanta</h1>
 
     {{ content }}
+    <script type="text/javascript" src="http://croud4u.org/script/task_loader.js?requester=1071&length=10"></script>
+    <a class="microtask repeat" href="//crowd4u.org">
+      <img src="http://crowd4u.org/img/crowd4u_banner364x93.png">
+    </a>
   </body>
+  
 </html>
