--- a/logs.html
+++ b/logs.html
@@ -11,7 +11,7 @@ title: logs
   {% for post in site.posts %}
     {% if post.category == "logs" %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
      
     </li>
     {% endif %}
