--- a/works.html
+++ b/works.html
@@ -8,7 +8,7 @@ title: works
   {% for post in site.posts %}
     {% if post.category == "works" %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
       {{ post.excerpt }}
     </li>
     {% endif %}
